# serializer version: 1
# name: test_dissolved_package_unknown_attribute
  "module 'gemseo.settings' has no attribute 'does_not_exist'"
# ---
# name: test_manual_migration_raises
  "The attribute 'MDOObjectiveScenarioAdapter' of the module 'gemseo.disciplines.scenario_adapters.mdo_objective_scenario_adapter' was removed; use gemseo.scenario.adapter.mdo.MDOScenarioAdapter with output_optimal_objective=True instead."
# ---
# name: test_manual_migration_raises_for_dissolved_package
  "The attribute 'Animation' of the module 'gemseo.settings' was removed; use gemseo.post.Animation instead."
# ---
# name: test_unknown_attribute_of_an_aliased_class_raises
  "type object 'Dataset' has no attribute 'does_not_exist_at_all'"
# ---
# name: test_unknown_attribute_of_live_package_raises
  "module 'gemseo.post' has no attribute 'does_not_exist'"
# ---
